--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -453,6 +453,25 @@ header.open .hamburger span:nth-child(4) {
     fill: #414855;
 }
 
+.service-video-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 2rem;
+  padding: 2rem;
+  background-color: #f7f7f7;
+  border-radius: 10px;
+}
+
+.service-video-flex iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 10px;
+}
+
+
 /* Testimonial Section */
 
 .testimonial-content {
