--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -464,7 +464,16 @@ header.open .hamburger span:nth-child(4) {
   border-radius: 10px;
 }
 
+.service-video-flex .video-wrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+
 .service-video-flex iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   border: none;
