--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -455,51 +455,29 @@ header.open .hamburger span:nth-child(4) {
 
 /* Video Section */
 
+.video-section {
+    padding: 6rem 0;
+}
+
 .video-flex {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 4rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .video-text {
-  flex-basis: 50%;
-  text-align: center;
+    flex: 1;
 }
 
-.video-text h3 {
-  font-size: 2rem;
-  margin-bottom: 1rem;
+.video-player {
+    flex: 1;
+    margin-left: 3rem;
 }
 
-.video-text h2 {
-  font-size: 3rem;
-  margin-bottom: 2rem;
+.video-player iframe {
+    width: 100%;
+    height: 100%;
 }
-
-.video-text p {
-  font-size: 1.2rem;
-  line-height: 1.5;
-  margin-bottom: 2rem;
-}
-
-.video-embed {
-  flex-basis: 50%;
-  overflow: hidden;
-  position: relative;
-  padding-bottom: 56.25%; /* 16:9 aspect ratio */
-}
-
-.video-embed iframe {
-  border: 0;
-  height: 100%;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 100%;
-}
-
 
 /* Testimonial Section */
 
