--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -470,11 +470,16 @@ header.open .hamburger span:nth-child(4) {
 }
 
 .video-player {
-    flex: 2;
-    margin-left: 3rem;
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-top: 56.25%; /* 16:9 aspect ratio */
 }
 
 .video-player iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
 }
