--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -469,11 +469,9 @@ header.open .hamburger span:nth-child(4) {
     flex: 1;
 }
 
-.video-player {
-    position: relative;
-    width: 100%;
-    height: 0;
-    padding-top: 56.25%; /* 16:9 aspect ratio */
+.video-player { 
+  width: 100%;
+  aspect-ratio: 16 / 9;
 }
 
 .video-player iframe {
