--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -471,8 +471,9 @@ header.open .hamburger span:nth-child(4) {
 
 .video-player { 
   position: relative;
-  padding-bottom: 56.25%; /* 16:9 */
+  width: 100%;
   height: 0;
+  padding-top: 56.25%; /* 16:9 aspect ratio */
 }
 
 .video-player iframe {
