--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -473,11 +473,11 @@ header.open .hamburger span:nth-child(4) {
   position: relative;
   width: 100%;
   height: 0;
-  padding-top: 56.25%; /* 16:9 aspect ratio */
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
 }
 
 .video-player iframe {
-    position: relative;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
