--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -473,7 +473,7 @@ header.open .hamburger span:nth-child(4) {
   position: relative;
   width: 100%;
   height: 0;
-  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  padding-top: 56.25%; /* 16:9 aspect ratio */
 }
 
 .video-player iframe {
