--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -484,6 +484,12 @@ header.open .hamburger span:nth-child(4) {
     height: 100%;
 }
 
+.video-player img {
+    border-radius: 10px;
+    -webkit-box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
 /* Testimonial Section */
 
 .testimonial-content {
