--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -660,7 +660,7 @@ header.open .hamburger span:nth-child(4) {
 }
 
 .faq-content {
-    position: relative;
+    position: absolute;
     padding: 2rem;
     border-radius: 24px 24px 140px 140px;
     background-color: #f7f8fd;
