--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -660,12 +660,15 @@ header.open .hamburger span:nth-child(4) {
 }
 
 .faq-content {
-    position: absolute;
-    padding: 2rem;
-    border-radius: 24px 24px 140px 140px;
-    background-color: #f7f8fd;
-    text-align: center;
-    width: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 2rem;
+  border-radius: 24px 24px 140px 140px;
+  background-color: #f7f8fd;
+  text-align: center;
+  margin: 0 auto;
 }
 
 .hr-line{
