--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -660,7 +660,7 @@ header.open .hamburger span:nth-child(4) {
 }
 
 .faq-content {
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
