--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -660,15 +660,12 @@ header.open .hamburger span:nth-child(4) {
 }
 
 .faq-content {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 2rem;
-  border-radius: 24px 24px 140px 140px;
-  background-color: #f7f8fd;
-  text-align: center;
-  margin: 0 auto;
+    position: relative;
+    padding: 2rem;
+    border-radius: 24px 24px 140px 140px;
+    background-color: #f7f8fd;
+    text-align: center;
+    width: 50%;
 }
 
 .hr-line{
