--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -692,7 +692,7 @@ header.open .hamburger span:nth-child(4) {
     /* text-align: center; */
    width: 50%; 
    padding: auto;
-   
+   text-align: left;
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
