--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -695,6 +695,11 @@ header.open .hamburger span:nth-child(4) {
    text-align: left;
 }
 
+faq-body ul {
+  list-style: disc;
+  color: #1E2D3D;
+}
+
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .faq-page:hover {
     background-color: #ced4f3;
